# canvas-native

./: .gitignore  CMakeLists.txt  README.md  app.js  app.ts  canvas-native.ts  deno.json  lib.dom.ts  mod.ts  worker.ts
.github/workflows/: build.yml  ci.yml  release.yml
demos/: boids.ts  bouncing-balls.ts  bouncing-rect-app.ts  bouncing-rect-worker.ts  double-pendulum.ts  flow-field.ts  game-of-life.ts  matrix.ts  paint.ts  pendulum-wave.ts  wave-grid.ts
native/: bridge.h  commands.h  export.h  lib.cpp  main.cpp  meta.cpp  meta.h  nvg.h  nvg_gl_impl.cpp  sdl3_nvg_setup.h  utils.cpp  utils.h  window.cpp  window.h  window_state.cpp  window_state.h
native/bridge/: return_call.h  return_command.h  sync.h
native/debug/: main.cpp  test_multithread.cpp
native/dispatcher/: dispatcher.cpp  dispatcher.h  dispatcher_sync.cpp  dispatcher_sync.h  draw_batch.cpp  draw_batch.h  draw_call.cpp  draw_call.h  draw_commands.cpp  draw_commands.h  return_call.cpp  return_call.h  sync.cpp  sync.h  sync_call.cpp  sync_call.h  sync_commands.cpp  sync_commands.h
native/events/: event_queue.cpp  event_queue.h
native/graphics/: gl.h  renderer.cpp  renderer.h  texture.cpp  texture.h
native/nvg/: font.cpp  font.h  image.cpp  image.h  rect.cpp  rect.h  setup.h  text.cpp  text.h
scripts/: generateBridge.ts  generateSymbols.ts
source/: lib.cpp  main.cpp
src/: bridge.ts  canvas.ts  commandBuffer.ts  constants.ts  context2d.ts  drawCommandBuffer.ts  drawCommands.ts  drawCommandsBase.ts  ffi.ts  frameLoop.ts  generateBridge.ts  generateSymbols.ts  image.ts  nanoVGBridge.ts  nanovgSymbols.ts  renderingContext2d.ts  returnCall.ts  structs.ts  syncCall.ts  types.ts  utils.ts
src/api/: image.ts  renderingContext2d.ts  types.ts
src/commands/: buffer.ts  draw.ts  drawBase.ts  sync.ts
src/ffi/: bindings.bun.ts  bindings.deno.ts  bindings.ts  loadLib.ts
src/runtime/: canvas.ts  eventDecoder.ts  eventDispatcher.ts  frameLoop.ts  keyMap.ts  mainLoop.ts
tests/: demo.d.ts  demo.js  ffi_test.ts  test.html
